# lrr_gpio

./: CMakeLists.txt  README.md  lrr_gpio.c  lrr_gpio.h
test/input/: CMakeLists.txt  lrr_gpio_input.c
test/interrupt/: CMakeLists.txt  lrr_gpio_interrupt.c
test/output/: CMakeLists.txt  lrr_gpio_output.c
